# genai_cicd_project_v1

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml  infra_provision.yml  test.yml
aws_scripts/: __init__.py  ami_manager.py  ec2_manager.py  ecr_manager.py  iam_manager.py  key_pair_manager.py  security_group_manager.py  subnet_manager.py  vpc_manager.py
back_end/: main.py
back_end/routes/: api_routes.py  debug_routes.py  ui_routes.py
configs/: check_config.py  infra_config.ini  load_config.py
front_end/static/css/: content_box.css  image-paste.css  main-layout.css  sidebar-layout.css
front_end/static/css-others/: vec db.css
front_end/static/js/: script.js
front_end/templates/: chat_history_template.html  index.html
front_end/templates/components/: content.html  sidebar.html
notebooks/: Untitled.ipynb
src/: chat_engines.py  llm.py
terraform/: init.sh  main.tf  variables.tf
